Update 6. Destructuring Assignment.md

--- a/6. Destructuring Assignment.md
+++ b/6. Destructuring Assignment.md
@@ -228,8 +228,8 @@ function userId({id}) {
   return id;
 }
 
-function whois({displayName, fullName: {firstName: name}}) {
-  return `${displayName} is ${name}`;
+function whois({displayName, id, fullName: {firstName: name}, fullName: {lastName}}) {
+    return `${displayName}, firstname = ${name} , id = ${id}, last is ${lastName}, fullname = ${name+lastName}`;
 }
 
 console.log(userId(user)); // 42
