Update 6. Destructuring Assignment.md

--- a/6. Destructuring Assignment.md
+++ b/6. Destructuring Assignment.md
@@ -233,7 +233,7 @@ function whois({displayName, id, fullName: {firstName: name}, fullName: {lastNam
 }
 
 console.log(userId(user)); // 42
-console.log(whois(user));  // "jdoe is John"
+console.log(whois(user));  // jdoe, firstname = John , id = 42, last is Doe, fullname = JohnDoe
 ```
 
 
