Update 6. Destructuring Assignment.md

--- a/6. Destructuring Assignment.md
+++ b/6. Destructuring Assignment.md
@@ -13,7 +13,7 @@ console.log(rest); // [30, 40, 50, 100]
 
 ```js
 //1. deklarasi variable rest
-//2. ...rest merupakan rest properties untuk mengambil sisa nilai yang tersisa dari array
+//2. ...rest merupakan spread operator untuk mengambil sisa nilai yang tersisa dari array
 //3. dalam destructuring, rest properties harus berada di akhir element terakhir
 
 let a, b, rest;
