--- a/6. Destructuring Assignment.md
+++ b/6. Destructuring Assignment.md
@@ -14,7 +14,7 @@ console.log(rest); // [30, 40, 50, 100]
 ```js
 //1. deklarasi variable rest
 //2. ...rest merupakan spread operator untuk mengambil sisa nilai yang tersisa dari array
-//3. dalam destructuring, rest properties harus berada di akhir element terakhir
+//3. dalam destructuring, spread operator(...rest) harus berada di akhir element terakhir
 
 let a, b, rest;
 [a, b, ...rest] = [10, 20, 5, 6, 7];
